<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alek.ble_hid_example.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/keyboard_sub_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/keyboard"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/activity_text_big" />

            <EditText
                android:id="@+id/keyboard_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrey"
                android:hint="@string/enter_text"
                android:nextFocusLeft="@id/keyboard_edit_text"
                android:nextFocusUp="@id/keyboard_edit_text"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/keyboard_button_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_single_character"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/keyboard_spinner_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:textColor="@color/colorWhite" />

            <ToggleButton
                android:id="@+id/keyboard_toggle_kb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/keyboard_off"
                android:textOn="@string/keyboard_on" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/keyboard_text_device_info"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="20"
        android:background="#FF888888"
        android:text="@string/device_not_connected"
        android:textAlignment="center"
        android:textColor="#FF000000" />
</LinearLayout>
