<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alek.ble_hid_example.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/configuration"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/activity_text_big" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin_0_25">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/force_pairing"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/activity_text_medium" />

            <Switch
                android:id="@+id/conf_pair_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/SwitchTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin_0_25">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/basic_mode"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/activity_text_medium" />

            <Switch
                android:id="@+id/conf_basic_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/SwitchTheme" />
        </LinearLayout>

        <TextView
            android:id="@+id/conf_feat_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/consumer"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/activity_text_medium" />

        <Button
            android:id="@+id/conf_reboot_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reboot_application" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/list_of_connected_devices"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/activity_text_medium" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/conf_linear_layout_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
