<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alek.ble_hid_example.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/cons_sub_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/consumer_control"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/activity_text_big" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music_player_control"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/cons_button_previous"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_skip_previous_black_24dp" />

                <ImageButton
                    android:id="@+id/cons_button_stop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_stop_black_24dp" />

                <ImageButton
                    android:id="@+id/cons_button_start_stop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_pause_play_black_24dp" />

                <ImageButton
                    android:id="@+id/cons_button_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_skip_next_black_24dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/volume_control"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/cons_button_vol_minus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_volume_down_black_24dp" />

                <ImageButton
                    android:id="@+id/cons_button_mute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_volume_off_black_24dp" />

                <ImageButton
                    android:id="@+id/cons_button_vol_plus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_volume_up_black_24dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brightness_control"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/cons_button_bright_minus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_brightness_low_black_24dp" />

                <ImageButton
                    android:id="@+id/cons_button_bright_plus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_brightness_high_black_24dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/miscellaneous"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/cons_button_eject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_eject_black_24dp" />

                <ImageButton
                    android:id="@+id/cons_button_snapshot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_photo_camera_black_24dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/cons_system_text_hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_control"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:id="@+id/cons_system_button_layout_hidden"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/cons_button_system_sleep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_brightness_3_black_24dp" />

                <ImageButton
                    android:id="@+id/cons_button_system_hibernation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_hotel_black_24dp" />

                <ImageButton
                    android:id="@+id/cons_button_system_power_down"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_power_settings_new_black_24dp" />

                <ImageButton
                    android:id="@+id/cons_button_system_restart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_refresh_black_24dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/cons_launch_text_hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/application_launch"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/cons_spinner_al_hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/cons_control_text_hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/application_control"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/cons_spinner_ac_hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/cons_text_device_info"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="20"
        android:background="#888888"
        android:text="@string/device_not_connected"
        android:textAlignment="center"
        android:textColor="#000000" />
</LinearLayout>
